# daft-quant

./: README.md  pyproject.toml  run_rsi_live_510050.py  schedule_live_trading.bat  setup_scheduled_task.ps1  trading_log_analysis.md
demo/: kdj_strategy_demo.ipynb
demo/demo_reports/000001_SZ_KDJ策略_all_in_20251209_225242/: summary.txt
src/backtest/: plotting.py  report.py
src/live_trading/: engine.py  order_manager.py
